<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_default_user_name"
        android:key="user_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_user_name"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/pref_default_user_email"
        android:key="user_email"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_user_email"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:defaultValue="@string/pref_default_user_social"
        android:entries="@array/pref_user_fav_social"
        android:entryValues="@array/pref_user_fav_social_values"
        android:key="user_pref_social"
        android:title="@string/pref_user_social"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>